# mabs

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  run.py  submission.json
configs/etc/: bernoulli.py  normal.py
configs/lints/: normal.py
configs/linucb/: normal.py
configs/optimal/: bernoulli.py  density.py  point.py
configs/ts/: bernoulli.py  normal.py
configs/ucb/: bernoulli.py  normal.py
mabs/: __init__.py
mabs/arms/: base.py
mabs/envs/: __init__.py  record.py
mabs/envs/bayesian/: __init__.py  optimal.py
mabs/envs/bayesian/optimal/: density.py  point.py
mabs/envs/contextual/: base.py  thompson.py
mabs/envs/simple/: etc.py
mabs/envs/ucb/: __init__.py  base.py  moss.py
notebooks/: etc.ipynb  lints.ipynb  linucb.ipynb  optimal.ipynb  thompson.ipynb  ucb.ipynb
notebooks/etc/: etc_bernoulli.ipynb  etc_normal.ipynb
notebooks/linear/: lints.ipynb  linucb.ipynb
notebooks/thompson/: ts_bernoulli.ipynb  ts_normal.ipynb
notebooks/ucb/: ucb_bernoulli.ipynb  ucb_normal.ipynb
src/mabs/: __init__.py
src/mabs/arms/: __init__.py  base.py  bernoulli.py  deterministic.py  normal.py
src/mabs/arms/contextual/: __init__.py  linear.py
src/mabs/envs/: __init__.py  base.py  record.py  thompson.py
src/mabs/envs/bayesian/: __init__.py  optimal.py  thompson.py
src/mabs/envs/contextual/: __init__.py  base.py  thompson.py  ucb.py
src/mabs/envs/simple/: __init__.py  base.py  etc.py  ucb.py
src/mabs/envs/ucb/: __init__.py  asymptotic.py  base.py  kl.py
src/mabs/visualization/: visualizer.py
