[tool.poetry]
name = "mabs"
version = "0.1.0"
description = ""
authors = ["Xiqiang Liu <9440183+xiqiangliu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.24.0"
scipy = ">=1.8.0"
seaborn = "^0.12.2"
tqdm = ">=4.64.0"
pandas = ">=1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
